<resources>
    <string name="app_name">Mirror</string>

    <string name="landing_text_creat">创建账号</string>
    <string name="landing_phonenum">手机号</string>
    <string name="landing_landing">登录</string>
    <string name="landing_create">创建账号</string>
    <string name="landing_user">使用社交账号</string>
    <string name="landing_proess">密码</string>
    <string name="login_create_user">创建账号</string>
    <string name="login_set_proess">设置密码</string>
    <string name="login_send_code">发送验证码</string>
    <string name="login_get_code">验证码</string>
    <string name="login_phonenum">手机号</string>
    <string name="login_create">创建账号</string>
    <string name="toSignActivity">toSignActivity</string>
    <string name="order_order">购买详情</string>
    <string name="order_assend">填写地址</string>
    <string name="order_someone">请填写收件人信息</string>
    <string name="order_confirm">确认下单</string>


    <string name="test_fragment_list_title">浏览平光眼镜</string>


    <string name="test_fragment_list_item_brand">SEE CONCEPT</string>
    <string name="test_fragment_list_item_city">法国巴黎</string>
    <string name="test_fragment_list_item_price">$1000</string>
    <string name="test_fragment_list_item_glasses_name">草莓红色圆框阅读镜</string>


    <string name="fragment_menu_autolinearlayoutnext_tv_text">返回首頁</string>
    <string name="fragment_menu_autolinearlayoutthird_tv_text">退出</string>

    <string name="login_myPhone">账号登录</string>

    <string name="fragment_buy_frame_tv_text">您的購物車沒有商品</string>
    <string name="activity_mian_tv_login_textview">登录</string>


    <string name="test_fragment_list_titleNest">显示排列为 最新推荐</string>
    <string name="test_fragment_list_glassesitem_brand">SEE CONCEPT</string>
    <string name="test_fragment_list_glassesitem_city">法国巴黎</string>
    <string name="test_fragment_list_glassesitem_price">$1000</string>
    <string name="test_fragment_list_glassesitem_name">草莓红色圆框阅读镜</string>
    <string name="hello">Hello World, JPush!</string>
    <string name="tag_hint">Tag为大小写字母，数字，下划线,中文， 多个用以逗号分隔</string>
    <string name="alias_hint">Alias为大小写字母，数字，下划线</string>
    <string name="style_hint">style为数字</string>
    <string name="error_style_empty">style不能为空</string>
    <string name="error_alias_empty">alias不能为空</string>
    <string name="error_tag_empty">tag不能为空</string>
    <string name="error_tag_gs_empty">格式不对</string>
    <string name="error_network">网络连接异常,初始化失败 请检查网络！</string>
    <string name="logining">程序在后台执行, 请查看日志！</string>
    <string name="setting_su">设置成功</string>

    <string name="activity_addaddress_title_text">添加地址</string>
    <string name="activity_addaddress_name_textView_text">添加收件人姓名</string>
    <string name="activity_addaddress_phone_textView_text">添加联系人电话号码</string>
    <string name="activity_addaddress_address_textView_text">添加收货地址</string>
    <string name="activity_addaddress_button_text">提交地址</string>

    <string name="activity_address_testview_toAdd_text">添加地址</string>

    <string name="activity_address_item_textview_name_text">收件人:</string>
    <string name="activity_address_item_textview_address_text">地址:</string>
    <string name="activity_address_item_textview_del_text">删除</string>


    <string name="activity_changeaddress_title_text">编辑地址</string>
    <string name="activity_changeaddress_name_textView_text">编辑收件人姓名</string>
    <string name="activity_changeaddress_phone_textView_text">编辑联系人电话号码</string>
    <string name="activity_changeaddress_address_textView_text">编辑收货地址</string>
    <string name="activity_changeaddress_button_text">提交修改</string>
    
    <string name="activity_everyglasses_title_last_text">滑动浏览详情</string>
    <string name="everyglasses_button_topic_text">佩戴图集</string>
    <string name="landing_mar_tv_text">￥</string>

    <string name="activity_order_glasses_content_text">您所购买的商品为官网正品现货,我们将于三个工作日内为你免费发货,你所购买的商品均使用顺丰速运进行配送</string>

</resources>
