<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/landing_layout_hui"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/landing_mar_top_image"
        android:layout_marginRight="@dimen/landing_mar_top_image"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/landing_mar_top_image"
            android:text="@string/login_create"
            android:textSize="@dimen/landing_text_land_size" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/landing_mar_top_phone"
            android:background="@mipmap/iv_login_line" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/landing_mar_top_land"
            android:text="@string/login_phonenum"
            android:textSize="@dimen/landing_text_phonenum_size" />

        <EditText
            android:id="@+id/sign_et_phoneNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/landing_mar_top_phone"
            android:background="@mipmap/img_phone_num" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/landing_mar_top_image"
            android:text="@string/login_get_code"
            android:textSize="@dimen/landing_text_phonenum_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/landing_mar_top_phone"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/sign_et_getCode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@mipmap/img_phone_num" />

            <TextView
                android:id="@+id/sign_tv_sendmessage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@mipmap/iv_creat_num"
                android:gravity="center"
                android:text="@string/login_send_code"
                android:textColor="@android:color/white"
                android:textSize="@dimen/landing_text_phonenum_size" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/landing_mar_top_image"
            android:text="@string/login_set_proess"
            android:textSize="@dimen/landing_text_phonenum_size" />

        <EditText
            android:id="@+id/sign_et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/landing_mar_top_phone"
            android:background="@mipmap/img_phone_num" />

        <Button
            android:id="@+id/sign_tv_creatID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/landing_mar_top_user"
            android:background="@mipmap/iv_creat_num"
            android:gravity="center"
            android:text="@string/login_create_user"
            android:textColor="@android:color/white"
            android:textSize="@dimen/landing_text_land_size" />
    </LinearLayout>


</com.zhy.autolayout.AutoLinearLayout>
