<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/activity_addaddress_layout_marginLeft"
        android:layout_marginRight="@dimen/activity_addaddress_layout_marginRight"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/addaddress_creat"
                style="@style/landing_view_textsize_creat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_addaddress_title_text"
                android:textColor="@android:color/black" />

            <ImageButton
                android:id="@+id/addaddress_btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/addaddress_creat"
                android:layout_alignParentRight="true"
                android:background="@mipmap/close" />
        </RelativeLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_addaddress_title_line_marginTop"
            android:background="@mipmap/iv_login_line" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_addaddress_name_textView_marginTop"
            android:text="@string/activity_addaddress_name_textView_text"
            android:textColor="@color/activity_addaddress_textView_textColor"
            android:textSize="@dimen/activity_addaddress_name_textView_textSize" />

        <EditText
            android:id="@+id/addaddress_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_addaddress_name_editText_height"
            android:layout_marginTop="@dimen/activity_addaddress_name_editText_marginTop"
            android:background="@color/activity_addaddress_editText_background" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_addaddress_phone_textView_marginTop"
            android:text="@string/activity_addaddress_phone_textView_text"
            android:textColor="@color/activity_addaddress_textView_textColor"
            android:textSize="@dimen/activity_addaddress_phone_textView_textSize" />

        <EditText
            android:id="@+id/addaddress_phone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_addaddress_phone_editText_height"
            android:layout_marginTop="@dimen/activity_addaddress_phone_editText_marginTop"
            android:background="@color/activity_addaddress_editText_background" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_addaddress_address_textView_marginTop"
            android:text="@string/activity_addaddress_address_textView_text"
            android:textColor="@color/activity_addaddress_textView_textColor"
            android:textSize="@dimen/activity_addaddress_address_textView_textSize" />

        <EditText
            android:id="@+id/addaddress_address"
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_addaddress_address_editText_height"
            android:layout_marginTop="@dimen/activity_addaddress_address_editText_marginTop"
            android:background="@color/activity_addaddress_editText_background" />

        <Button
            android:id="@+id/addaddress_btn_add"
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_addaddress_button_height"
            android:layout_marginTop="@dimen/activity_addaddress_button_marginTop"
            android:background="@mipmap/iv_creat_num"
            android:text="@string/activity_addaddress_button_text"
            android:textColor="@color/activity_addaddress_button_textColor" />
    </LinearLayout>
</LinearLayout>
