<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/activity_changeaddress_layout_marginLeft"
        android:layout_marginRight="@dimen/activity_changeaddress_layout_marginRight"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/changeaddress_creat"
                style="@style/landing_view_textsize_creat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_changeaddress_title_text"
                android:textColor="@android:color/black" />

            <ImageButton
                android:id="@+id/changeaddress_btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/changeaddress_creat"
                android:layout_alignParentRight="true"
                android:background="@mipmap/close" />
        </RelativeLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_changeaddress_line_marginTop"
            android:background="@mipmap/iv_login_line" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_changeaddress_textview_name_marginTop"
            android:text="@string/activity_changeaddress_name_textView_text"
            android:textColor="@color/activity_changeaddress_textview_textColor"
            android:textSize="@dimen/activity_changeaddress_textview_textSize" />

        <EditText
            android:id="@+id/changeaddress_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_changeaddress_name_editText_height"
            android:layout_marginTop="@dimen/activity_changeaddress_name_editText_marginTop"
            android:background="@color/activity_changeaddress_editText_background" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_changeaddress_textview_marginTop"
            android:text="@string/activity_changeaddress_phone_textView_text"
            android:textColor="@color/activity_changeaddress_textview_textColor"
            android:textSize="@dimen/activity_changeaddress_textview_textSize" />

        <EditText
            android:id="@+id/changeaddress_phone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_changeaddress_phone_editText_height"
            android:layout_marginTop="@dimen/activity_changeaddress_phone_editText_marginTop"
            android:background="@color/activity_changeaddress_editText_background" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_changeaddress_textview_marginTop"
            android:text="@string/activity_changeaddress_address_textView_text"
            android:textColor="@color/activity_changeaddress_textview_textColor"
            android:textSize="@dimen/activity_changeaddress_textview_textSize" />

        <EditText
            android:id="@+id/changeaddress_address"
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_changeaddress_address_editText_height"
            android:layout_marginTop="@dimen/activity_changeaddress_address_editText_marginTop"
            android:background="@color/activity_changeaddress_editText_background" />

        <Button
            android:id="@+id/changeaddress_btn_change"
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_changeaddress_button_height"
            android:layout_marginTop="@dimen/activity_changeaddress_button_marginTop"
            android:background="@mipmap/iv_creat_num"
            android:text="@string/activity_changeaddress_button_text"
            android:textColor="@color/activity_changeaddress_button_textColor" />
    </LinearLayout>
</LinearLayout>
