<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/buyFragment_bg"
    >


    <LinearLayout
        android:id="@+id/fragment_buy_click"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/fragment_list_click_marginLeft"
        android:layout_marginTop="@dimen/fragment_list_click_marginTop"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/fragment_buy_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/test_fragment_list_title"
                android:textColor="@color/fragment_menu_textcolor"
                android:textSize="@dimen/fragment_list_title_testsize" />

            <ImageView
                android:id="@+id/fragment_buy_title_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/fragment_list_title_iv_marginLeft"
                android:src="@mipmap/iv_bottom_arrow" />
        </RelativeLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fragment_list_title_line_marginTop"
            android:src="@mipmap/iv_line_of_title_bottom" />

        <TextView
            android:id="@+id/fragment_buy_titleNest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fragment_list_titleNest_marginTop"
            android:text="@string/test_fragment_list_titleNest"
            android:textColor="@color/fragment_menu_textcolor"
            android:textSize="@dimen/fragment_list_titleNest_textSize" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/fragment_buy_frame_height"
        android:layout_marginLeft="@dimen/fragment_buy_frame_marginleft"
        android:layout_marginTop="@dimen/fragment_buy_frame_margintop">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/fragment_buy_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible" />

        <com.zhy.autolayout.AutoLinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="visible">

            <ImageView
                android:layout_width="@dimen/fragment_buy_frame_iv_width"
                android:layout_height="@dimen/fragment_buy_frame_iv_height"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/fragment_buy_frame_iv_margintop"
                android:background="@mipmap/icon_shopping_car_nothing" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/fragment_buy_frame_tv_margintop"
                android:text="@string/fragment_buy_frame_tv_text"
                android:textColor="@color/fragment_menu_textcolor"
                android:textSize="@dimen/fragment_buy_frame_tv_textsize" />
        </com.zhy.autolayout.AutoLinearLayout>

    </FrameLayout>

</com.zhy.autolayout.AutoLinearLayout>


